--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "negotiator": "^1.0.0",
+    "node-telegram-bot-api": "^0.66.0",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
     "once": "^1.4.0",
@@ -102,7 +103,6 @@
     "wrappy": "^1.0.2",
     "xtend": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch server.js",
